<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/background">
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/unranked_warning_top"/>
    
    <ImageView android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/contentDesc"
        android:src="@drawable/img_unranked"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:text="@string/unranked_warning"
        android:textStyle="bold"/>
    
    <CheckBox android:id="@+id/warning_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@color/pointColor"
        android:textSize="12sp"
        android:text="@string/unranked_warning_check"/>
    
</LinearLayout>
