<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    
	<android.support.v4.view.ViewPager
	    android:id="@+id/pager"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
	
	<LinearLayout android:id="@+id/left_drawer_view"
	    android:layout_width="240dp"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:layout_gravity="start"
	    android:background="@color/background">
	    
	    <LinearLayout android:id="@+id/drawer_header"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
		    <ImageView
		        android:id="@+id/drawer_header_image"
		        android:layout_width="match_parent"
		        android:layout_height="90dp"
		        android:src="@drawable/ic_launcher"
		        android:contentDescription="@string/contentDesc"/>
			
		    <TextView
		        android:id="@+id/drawer_header_summoner"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/test"
		        android:layout_gravity="center"
		        android:textSize="20sp"/>
		    
	    </LinearLayout>
	    
	    <View android:layout_width="match_parent"
	        android:layout_height="0.5dp"
	        android:layout_marginTop="10dp"
	        android:background="@android:color/darker_gray"/>
	    
		<ListView
		    android:id="@+id/list_slidemenu"
		    android:layout_width="240dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="start"
		    android:choiceMode="singleChoice"
		    android:divider="?android:dividerHorizontal"
		    android:showDividers="middle"/>
		
		<View android:layout_width="match_parent"
	        android:layout_height="0.5dp"
	        android:layout_marginBottom="10dp"
	        android:background="@android:color/darker_gray"/>
		
		<LinearLayout android:id="@+id/drawer_footer"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		    
		    <LinearLayout android:id="@+id/toggleMenu"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		    	
		        <TextView android:id="@+id/toggleText"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/toggleDesc"/>
		        
		        <View android:layout_width="0dp"
		            android:layout_height="0dp"
		            android:layout_weight="1"/>
		        
			    <ToggleButton android:id="@+id/toggleBtn"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textOn="@string/togglePushOn"
			        android:textOff="@string/togglePushOff"/>
		    
		    </LinearLayout>
		    
		    <TextView android:id="@+id/openSourceDesc"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/openSourceDesc"/>
		    
		</LinearLayout>
	
    </LinearLayout>
    
</android.support.v4.widget.DrawerLayout>

