<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/background">
    
    <TextView android:id="@+id/searchPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchPos"/>
    
    <RelativeLayout android:id="@+id/posImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        
        <ImageView android:id="@+id/pos_top"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/character_shiv"
            android:contentDescription="@string/contentDesc"/>
       
        <ImageView android:id="@+id/pos_jungle"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/character_leesin"
            android:layout_toRightOf="@id/pos_top"
            android:contentDescription="@string/contentDesc"/>
        
        <ImageView android:id="@+id/pos_mid"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/character_orianna"
            android:layout_below="@id/pos_top"
            android:contentDescription="@string/contentDesc"/>
        
        <ImageView android:id="@+id/pos_ad"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/character_graves"
            android:layout_below="@id/pos_jungle"
            android:layout_toRightOf="@id/pos_mid"
            android:contentDescription="@string/contentDesc"/>

        <ImageView android:id="@+id/pos_support"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/character_blitz"
            android:layout_below="@id/pos_mid"
            android:contentDescription="@string/contentDesc"/>

        <ImageView android:id="@+id/pos_all"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/character_teemo"
            android:layout_below="@id/pos_ad"
            android:layout_toRightOf="@id/pos_support"
            android:contentDescription="@string/contentDesc"/>
        
    </RelativeLayout>
    
    
    <TextView android:id="@+id/searchRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchRange"/>
    
    <LinearLayout android:id="@+id/searchRangeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView android:id="@+id/range_min_text"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
        
        <View android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        
        <TextView android:id="@+id/range_max_text"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
    <LinearLayout android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        
        <Button android:id="@+id/cancleBtn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    style="?android:attr/buttonBarButtonStyle"
		    android:text="@string/cancelBtn"/>
        
		<Button android:id="@+id/applyBtn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    style="?android:attr/buttonBarButtonStyle"
		    android:text="@string/applyBtn"/>
		
	</LinearLayout>
    
</LinearLayout>
