<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">
    
    <TextView android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:visibility="gone"/>
    
    <TextView android:id="@+id/my_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="italic"/>
    
    <ImageView android:id="@+id/tier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:contentDescription="@string/contentDesc"/>
    
    <TextView android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    
    <TextView android:id="@+id/summoner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    
    <LinearLayout android:id="@+id/introduce_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/shape_box">
        
        <TextView android:id="@+id/introduce_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/introduce_header"
            android:textStyle="bold"/>
    
	    <TextView android:id="@+id/introduce"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15sp"/>
    
    </LinearLayout>
    
    <LinearLayout android:id="@+id/rank_stats_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@drawable/shape_box">
	    
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/rank_stats_txt"
            android:textStyle="bold"/>

	    <ListView android:id="@+id/rank_stats"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:divider="@null"
	        android:dividerHeight="10dp"
	    	android:textSize="15sp"/>
	    
    </LinearLayout>
    
</LinearLayout>